# FunnyPad

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
src/: main.cpp
src/audio/: CMakeLists.txt  SoundpadAudio.cpp  SoundpadAudio.hpp
src/music_config/: CMakeLists.txt  PlaylistManager.cpp  PlaylistManager.hpp  playlist.cpp  playlist.hpp  track.cpp  track.hpp
src/ui/: CMakeLists.txt  main.ui  main_window.cpp  main_window.hpp
